--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="css/styles.css">
+    <script src="Scripts/app.js"></script>
 </head>
 <body>
     <div class="calculator">
@@ -20,7 +21,14 @@
             <span>4</span>
             <span>5</span>
             <span>6</span>
-            <span>+</span>
+            <span id="plus">+</span>
+            <span>1</span>
+            <span>2</span>
+            <span>3</span>
+            <span>0</span>
+            <span>00</span>
+            <span>.</span>
+            <span id="equal">=</span>
         </div>
     </div>    
 </body>
